FLOWZEN-main/docker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workflow-automation
  labels:
    name: workflow-automation
    tier: production
